--- a/Pages/BookList/Index.cshtml
+++ b/Pages/BookList/Index.cshtml
@@ -6,11 +6,14 @@
 }
 
     <div class="container row p-0 m-0">
-        <div class="col-9">
+        <div class="col-6">
             <h2 class="text-info"> Book List</h2>
         </div>
         <div class="col-3">
             <a asp-page="Create" class="btn btn-primary form-control text-white">Create New Book</a>
+        </div>
+        <div class="col-3">
+            <a asp-page="Upsert" class="btn btn-primary form-control text-white">Create New Book [upsert]</a>
         </div>
 
         <div class="col-12 border p-3 mt-3">
@@ -62,7 +65,7 @@
         <div class="col-12" style="text-align:center">
             <br />
             <span class="h3 text-info">OR</span>
-            <br/><br/>
+            <br /><br />
         </div>
 
         <div class="col-12">
